--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,32 @@ a:focus:after {
 .vacation a:hover {
   color: red;
 }
+
+#car {
+  position: relative;
+  cursor: pointer;
+  margin-left: 1200px;
+  margin-top: 30px;
+  
+}
+#text {
+  margin-left: 1230px;
+  font-size: 20px;
+  
+}
+
+img {
+ -moz-transition: all 1s ease-out;
+ -o-transition: all 1s ease-out;
+ -webkit-transition: all 1s ease-out;
+ }
+ 
+img:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+ }
+  
  
   
   
